--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "wikiworldorder/survloop": "dev-master",
+        "wikiworldorder/survloop": "0.*"
     },
     "autoload": {
         "psr-4": {
