--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "wikiworldorder/survloop": "^0.0.25"
+        "wikiworldorder/survloop": "^v0.0.26"
     },
     "autoload": {
         "psr-4": {
