Another SurvLoop Version Fix
Attempt

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,14 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+      {
+        "type": "vcs",
+        "url": "https://github.com/wikiworldorder/survloop"
+      }
+    ],
     "require": {
-        "wikiworldorder/survloop": "^v0.0.26"
+        "wikiworldorder/survloop": "dev-master"
     },
     "autoload": {
         "psr-4": {
