--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,8 @@
             "role": "Developer"
         }
     ],
-    "repositories": [
-      {
-        "type": "vcs",
-        "url": "https://github.com/wikiworldorder/survloop"
-      }
-    ],
     "require": {
-        "wikiworldorder/survloop": "dev-master"
+        "wikiworldorder/survloop": "~0.1.0"
     },
     "autoload": {
         "psr-4": {
