--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     	"police departments", 
     	"oversight", 
     	"accountability",
-    	"laravel", 
-    	"SurvLoop"
+    	"Laravel", 
+    	"SurvLoop"                            
     ],
     "license": "GPL-3.0-or-later",
     "authors": [
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "wikiworldorder/survloop": "~0.1.0"
+        "wikiworldorder/survloop": "^0.1.2"
     },
     "autoload": {
         "psr-4": {
