--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "wikiworldorder/survloop": "0.1.*"
+        "wikiworldorder/survloop": "0.1.*@dev"
     },
     "autoload": {
         "psr-4": {
