--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "autoload": {
         "psr-4": {
             "OpenPolice\\": "src/"
+            "OpenPolice\\Models\\": "storage/app/models/openpolice",
         }
     }
 }
