--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload": {
         "psr-4": {
-            "OpenPolice\\": "src/"
+            "OpenPolice\\": "src/",
             "OpenPolice\\Models\\": "storage/app/models/openpolice",
         }
     }
