Seeder file was missing TreeSlug for all Pages

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
     },
     "autoload": {
         "psr-4": {
-            "OpenPolice\\": "src/",
-            "OpenPolice\\Models\\": "storage/app/models/openpolice"
+            "OpenPolice\\": "src/"
         }
     },
     "extra": {
