--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
         }
     ],
     "require": {
-        "wikiworldorder/survloop": "*@dev",
-        "flexyourrights/openpolice-departments": "*@dev"
+        "wikiworldorder/survloop": "^v0.1.29",
+        "flexyourrights/openpolice-departments": "^v0.1.1",
+        "flexyourrights/openpolice-website": "^v0.1"
     },
     "autoload": {
         "psr-4": {
