--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "wikiworldorder/survloop": "^v0.1.29",
         "flexyourrights/openpolice-departments": "^v0.1.1",
-        "flexyourrights/openpolice-website": "^v0.1"
+        "flexyourrights/openpolice-website": "v0.1"
     },
     "autoload": {
         "psr-4": {
