--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         }
     ],
     "require": {
-        "rockhopsoft/survloop": "*@dev",
-        "flexyourrights/openpolice-departments": "*@dev",
-        "flexyourrights/openpolice-website": "*@dev"
+        "rockhopsoft/survloop": "0.*",
+        "flexyourrights/openpolice-departments": "0.*",
+        "flexyourrights/openpolice-website": "0.*"
     },
     "autoload": {
         "psr-4": {
